# JumboMumbo

./: Cargo.toml  README.md
res/: credits.md  json_up.py
res/levels/: Mapper.json  level_2.pxo  level_3.pxo
res/textures/blocks/: cannon_0.json  cannon_0.pxo
res/textures/entities/: enemy_0.json  enemy_0.pxo  player.json  player.pxo  projectile_0.json  projectile_0.pxo
res/textures/items/: coin_0.json  coin_0.pxo  json_up.py  power_ups_0.json  power_ups_0.pxo
res/textures/player/: player_walk_left.pxo  player_walk_right.pxo
res/ui/: button_0.json  button_0.pxo  icons_0.json  icons_0.pxo  window_background.pxo
res/ui/button/: background.pxo  background_clicked.pxo  background_hovered.pxo
src/: main.rs
src/logic/: cannon.rs  collectible.rs  collider.rs  enemy.rs  level.rs  mod.rs  platform.rs  player.rs  projectile.rs
src/res/: credits.md
src/scenes/: credits.rs  level_selector.rs  main_menu.rs  mod.rs  settings_menu.rs
src/scenes/levels/: helper.rs  level_0.rs  level_1.rs  level_2.rs  level_3.rs  levels.rs  mod.rs  structs.rs
src/ui/: buttons.rs
src/utils/: debugger.rs  enums.rs  loading.rs  mapper.rs  mathemann.rs  mod.rs  random.rs  render.rs  structs.rs  text.rs  texture.rs
