[package]
name = "JumboMumbo"
version = "1.0.0"
edition = "2021"

[dependencies]
# The Base for everything like ui drawing and window management
macroquad = "0.4.13"
# Small addon to make collision detection and level worlds possible
macroquad-platformer = "0.2.0"
# Serilization and Deserilization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
# Get Platform directories (for cross-platform support)
dirs = "5.0.1"
# Measure execution time of code
stopwatch2 = "2.0.0"

[package.metadata.bundle]
name = "JumboMumbo"
icon = ["./res/icon"]
identifier = "com.rajalastudios.rajala1404.jumbomumbo"
version = "1.0.0"
resources = [ "res" ]
category = "Game"
short-description = "Computer Sience exam game"